--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+//    // https://mvnrepository.com/artifact/org.json/json
+//    compile group: 'org.json', name: 'json', version: '20170516'
+//    compile files('libs/json-20170516.jar')
+
     testCompile 'junit:junit:4.12'
 }
