--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-//    // https://mvnrepository.com/artifact/org.json/json
-//    compile group: 'org.json', name: 'json', version: '20170516'
-//    compile files('libs/json-20170516.jar')
-
+    compile 'com.android.support:recyclerview-v7:25.+'
+    compile 'com.firebase:firebase-jobdispatcher:0.5.2'
+    compile "com.squareup.picasso:picasso:2.4.0"
     testCompile 'junit:junit:4.12'
 }
